// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot test directory 1`] = `
<div
  className="directory-container"
>
  <div
    className="category-container"
  >
    <div
      className="background-image"
      style={
        {
          "backgroundImage": "url(https://i.ibb.co/cvpntL1/hats.png)",
        }
      }
    />
    <div
      className="category-body-container"
    >
      <h2>
        electronics
      </h2>
      <p>
        Shop Now
      </p>
    </div>
  </div>
  <div
    className="category-container"
  >
    <div
      className="background-image"
      style={
        {
          "backgroundImage": "url(https://i.ibb.co/R70vBrQ/men.png)",
        }
      }
    />
    <div
      className="category-body-container"
    >
      <h2>
        men's clothing
      </h2>
      <p>
        Shop Now
      </p>
    </div>
  </div>
  <div
    className="category-container"
  >
    <div
      className="background-image"
      style={
        {
          "backgroundImage": "url(https://i.ibb.co/GCCdy8t/womens.png)",
        }
      }
    />
    <div
      className="category-body-container"
    >
      <h2>
        women's clothing
      </h2>
      <p>
        Shop Now
      </p>
    </div>
  </div>
  <div
    className="category-container"
  >
    <div
      className="background-image"
      style={
        {
          "backgroundImage": "url(https://i.ibb.co/px2tCc3/jackets.png)",
        }
      }
    />
    <div
      className="category-body-container"
    >
      <h2>
        jewelery
      </h2>
      <p>
        Shop Now
      </p>
    </div>
  </div>
  <div
    className="category-container"
  >
    <div
      className="background-image"
      style={
        {
          "backgroundImage": "url(https://i.ibb.co/0jqHpnp/sneakers.png)",
        }
      }
    />
    <div
      className="category-body-container"
    >
      <h2>
        hats
      </h2>
      <p>
        Shop Now
      </p>
    </div>
  </div>
</div>
`;

exports[`snapshot test electronics category 1`] = `
<div
  className="category-container"
>
  <div
    className="background-image"
    style={
      {
        "backgroundImage": "url(https://i.ibb.co/cvpntL1/hats.png)",
      }
    }
  />
  <div
    className="category-body-container"
  >
    <h2>
      electronics
    </h2>
    <p>
      Shop Now
    </p>
  </div>
</div>
`;
